--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -47,7 +47,6 @@ dependencies:
   lottie: 2.0.0
   dio: 4.0.6
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -61,6 +60,8 @@ dev_dependencies:
   build_runner: 2.3.2
   auto_route_generator: 5.0.3
   dart_code_metrics: 5.0.1
+  url_launcher: ^6.1.7
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -89,6 +90,7 @@ flutter:
     - assets/anim/116184_sad_money.json
     - assets/anim/97585_star.json
     - assets/anim/107653_trophy.json
+    - assets/anim/118251_wallet_with_gold_coins.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
