--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.galileochampions.galileo_champions">
-   <application
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
+    <application
         android:label="galileo_champions"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
