--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.5+5
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -46,6 +46,7 @@ dependencies:
   json_annotation: 4.7.0
   lottie: 2.0.0
   dio: 4.0.6
+  package_info_plus: 3.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
